@@ -55,7 +55,7 @@ AH_BOTTOM([
 dnl
 dnl AC_CONFIG_AUX_DIR(m4)
 AC_PREREQ(2.52)
-AC_REVISION($Revision: 1.1.1.1 $)
+AC_REVISION($Revision: 1.2 $)
 AC_COPYRIGHT([Copyright (c) 1997-2007 Erez Zadok])
 dnl find out system type
 AC_MSG_NOTICE(*** SYSTEM TYPES ***)
@@ -1263,9 +1263,12 @@ AMU_CHECK_MNT2_CDFS_OPTS(\
 	defperm		\
 	extatt		\
 	gens		\
+	nocasetrans	\
 	nodefperm	\
+	nojoliet	\
 	norrip		\
 	noversion	\
+	rrcaseins	\
 	rrip		\
 	)
 dnl ======================================================================
